[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E203"]

[tool.ruff.lint.extend-per-file-ignores]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"